Добавил параметры диода маком и их влияние на результат

--- a/Сводка параметров.md
+++ b/Сводка параметров.md
@@ -1,56 +1,56 @@
 # Анализ параметров модели PIN_diode (PIN Diode) из ADS
 
-| Name         | Description                                                        | Units   | Default  | В схеме | Macom               |
-| ------------ | ------------------------------------------------------------------ | ------- | -------- | ------- | ------------------- |
-| Area         | Area scaling factor                                                | None    | 1.0      | 1       |                     |
-| Temp         | Device operating temperature                                       | °C      | 25.0     | 27      |                     |
-| Trise        | Temperature rise above the circuit ambient (if Temp not specified) | °C      | 0.0      | 0       |                     |
-| Tnom         | Temperature at which device parameters were established            | °C      | 25.0     | 27      |                     |
-| Noise        | Noise generation option: yes, no                                   | None    | yes      | yes     |                     |
-| Model\_level | Model level selector: 1=SPICE Cj model, 2=advanced Cj model        | None    | 1        | 2       |                     |
-| Is †, ††     | Saturation Current                                                 | A       | 1.0e-14  | 1e-15   | 2.3e-15 ()          |
-| N            | Emission coefficient                                               | None    | 1.0      | 1       | 1.1                 |
-| B            | PI-IN emission coefficient splitting factor                        | None    | 1.0      | 1       |                     |
-| Ikf ††       | High-injection knee current (0.0 means infinity)                   | A       | infinity | -       |                     |
-| Bv †         | Reverse breakdown voltage (0.0 means infinity)                     | V       | infinity | 40      | 42.6                |
-| Ibv †        | Current at reverse breakdown voltage                               | A       | 0.001    | 0.001   | 0.01 (MA44769-287T) |
-| Rs †, †††    | Diode ohmic resistance                                             | Ohms    | 0.0      | 0       | 0.8                 |
-| Rp †, †††    | Junction parallel resistance                                       | Ohms    | 1.0e9    | 1e9     |                     |
-| Repi †, †††  | Zero-bias resistance                                               | Ohms    | 1.0e3    | 1e3     |                     |
-| Rlim †, †††  | Minimum series resistance                                          | Ohms    | 1.0e-3   | 1e3     |                     |
-| W            | I-region width                                                     | m       | 1.0e-4   | 5e-6    |                     |
-| Wd           | Depletion area width                                               | m       | 1.0e-6   | 5e-6    |                     |
-| Tau          | Ambipolar carrier lifetime                                         | sec     | 1.0e-6   | 30 nsec |                     |
-| Iknee        | Current dependent lifetime knee current (0.0 means infinity)       | A       | infinity | 0 mA    |                     |
-| Rho          | I-region resistivity                                               | Ohm × m | 0.0      | 10      |                     |
-| Eps          | I-region dielectric constant                                       | None    | 11.сен   | 11.9    |                     |
-| Cj †, ††     | Zero-bias capacitance                                              | F       | 1.0e-15  | 1.2     | 0.89                |
-| Vj †         | Junction potential                                                 | V       | 1.0      | 0.8     | 0.4                 |
-| M †          | Grading coefficient                                                | None    | 0.0      | 5       | 0.2                 |
-| Fc           | Forward-bias depletion capacitance coefficient                     | None    | 0.5      | 0.85    | 0.5                 |
-| Eg           | Energy gap                                                         | eV      | 01.ноя   | 1.1     |                     |
-| Xti          | Temperature exponent for Is                                        | None    | 3.0      | -       |                     |
-| Trs          | Linear relative temperature coefficient for Rs                     | 1/°C    | 0.0      | -       |                     |
-| Trs2         | Quadratic relative temperature coefficient for Rs                  | 1/(°C)2 | 0.0      | -       |                     |
-| Trp          | Linear relative temperature coefficient for Rp                     | 1/°C    | 0.0      | -       |                     |
-| Trp2         | Quadratic relative temperature coefficient for Rp                  | 1/(°C)2 | 0.0      | -       |                     |
-| Trepi        | Linear relative temperature coefficient for Repi                   | 1/°C    | 0.0      | -       |                     |
-| Trepi2       | Quadratic relative temperature coefficient for Repi                | 1/(°C)2 | 0.0      | -       |                     |
-| Trlim        | Linear relative temperature coefficient for Rlim                   | 1/°C    | 0.0      | -       |                     |
-| Trlim2       | Quadratic relative temperature coefficient for Rlim                | 1/(°C)2 | 0.0      | -       |                     |
-| Tm1          | Linear relative temperature coefficient for M                      | 1/°C    | 0.0      | -       |                     |
-| Tm2          | Quadratic relative temperature coefficient for M                   | 1/(°C)2 | 0.0      | -       |                     |
-| Tbv          | Temperature coefficient for Bv                                     | V/°C    | 0.0      | -       |                     |
-| Kf           | Flicker noise coefficient                                          |         | 0.0      | -       |                     |
-| Af           | Flicker noise exponent                                             | None    | 1.0      | -       |                     |
-| Ffe          | Flicker noise frequency exponent                                   | None    | 1.0      | -       |                     |
-| Cpack ††     | Package parasitic capacitance                                      | F       | 0.0      | 0       | 0.1 pF              |
-| Lbond †††    | Package parasitic inductance                                       | H       | 0.0      | 5 nH    | 0.5 nH              |
-| Imax         | Explosion current                                                  | A       | 1.0      | 10      |                     |
-| \_M          | Number of devices in parallel                                      | None    | 1        | 1       |                     |
+| Name         | Description                                                        | Units   | Default  | В схеме | Macom                  | Воздействие на результат                                                                          |
+| ------------ | ------------------------------------------------------------------ | ------- | -------- | ------- | ---------------------- | ------------------------------------------------------------------------------------------------- |
+| Area         | Area scaling factor                                                | None    | 1.0      | 1       | -                      |                                                                                                   |
+| Temp         | Device operating temperature                                       | °C      | 25.0     | 27      | -                      |                                                                                                   |
+| Trise        | Temperature rise above the circuit ambient (if Temp not specified) | °C      | 0.0      | 0       | -                      |                                                                                                   |
+| Tnom         | Temperature at which device parameters were established            | °C      | 25.0     | 27      | -                      |                                                                                                   |
+| Noise        | Noise generation option: yes, no                                   | None    | yes      | yes     | -                      |                                                                                                   |
+| Model\_level | Model level selector: 1=SPICE Cj model, 2=advanced Cj model        | None    | 1        | 2       | -                      |                                                                                                   |
+| Is †, ††     | Saturation Current                                                 | A       | 1.0e-14  | 1e-15   | 2.3e-15 (MA44769-287T) |                                                                                                   |
+| N            | Emission coefficient                                               | None    | 1.0      | 1       | 1.1                    |                                                                                                   |
+| B            | PI-IN emission coefficient splitting factor                        | None    | 1.0      | 1       | -                      |                                                                                                   |
+| Ikf ††       | High-injection knee current (0.0 means infinity)                   | A       | infinity | -       | -                      |                                                                                                   |
+| Bv †         | Reverse breakdown voltage (0.0 means infinity)                     | V       | infinity | 40      | 42.6                   |                                                                                                   |
+| Ibv †        | Current at reverse breakdown voltage                               | A       | 0.001    | 0.001   | 0.01 (MA44769-287T)    |                                                                                                   |
+| Rs †, †††    | Diode ohmic resistance                                             | Ohms    | 0.0      | 0       | 0.8                    | ✅ (сдвиг)                                                                                         |
+| Rp †, †††    | Junction parallel resistance                                       | Ohms    | 1.0e9    | 1e9     | -                      |                                                                                                   |
+| Repi †, †††  | Zero-bias resistance                                               | Ohms    | 1.0e3    | 1e3     | -                      |                                                                                                   |
+| Rlim †, †††  | Minimum series resistance                                          | Ohms    | 1.0e-3   | 1e3     | -                      |                                                                                                   |
+| W            | I-region width                                                     | m       | 1.0e-4   | 5e-6    | -                      |                                                                                                   |
+| Wd           | Depletion area width                                               | m       | 1.0e-6   | 5e-6    | -                      |                                                                                                   |
+| Tau          | Ambipolar carrier life                                             | sec     | 1.0e-6   | 30 nsec | -                      |                                                                                                   |
+| Iknee        | Current dependent lifetime knee current (0.0 means infinity)       | A       | infinity | 0 mA    | -                      |                                                                                                   |
+| Rho          | I-region resistivity                                               | Ohm × m | 0.0      | 10      | -                      |                                                                                                   |
+| Eps          | I-region dielectric constant                                       | None    | 11.сен   | 11.9    | -                      |                                                                                                   |
+| Cj †, ††     | Zero-bias capacitance                                              | F       | 1.0e-15  | 1.2 pF  | 0.89 pF                | ✅ (форма)                                                                                         |
+| Vj †         | Junction potential                                                 | V       | 1.0      | 0.8     | 0.4                    | ✅ (форма)                                                                                         |
+| M †          | Grading coefficient                                                | None    | 0.0      | 5       | 0.2                    | ✅ (форма, не всегда сходится). Параметр сильнее всего влияет на форму. При 0.2 импульс всего 10В. |
+| Fc           | Forward-bias depletion capacitance coefficient                     | None    | 0.5      | 0.85    | 0.5                    |                                                                                                   |
+| Eg           | Energy gap                                                         | eV      | 1.11     | 1.1     | -                      |                                                                                                   |
+| Xti          | Temperature exponent for Is                                        | None    | 3.0      | -       | -                      |                                                                                                   |
+| Trs          | Linear relative temperature coefficient for Rs                     | 1/°C    | 0.0      | -       | -                      |                                                                                                   |
+| Trs2         | Quadratic relative temperature coefficient for Rs                  | 1/(°C)2 | 0.0      | -       | -                      |                                                                                                   |
+| Trp          | Linear relative temperature coefficient for Rp                     | 1/°C    | 0.0      | -       | -                      |                                                                                                   |
+| Trp2         | Quadratic relative temperature coefficient for Rp                  | 1/(°C)2 | 0.0      | -       | -                      |                                                                                                   |
+| Trepi        | Linear relative temperature coefficient for Repi                   | 1/°C    | 0.0      | -       | -                      |                                                                                                   |
+| Trepi2       | Quadratic relative temperature coefficient for Repi                | 1/(°C)2 | 0.0      | -       | -                      |                                                                                                   |
+| Trlim        | Linear relative temperature coefficient for Rlim                   | 1/°C    | 0.0      | -       | -                      |                                                                                                   |
+| Trlim2       | Quadratic relative temperature coefficient for Rlim                | 1/(°C)2 | 0.0      | -       | -                      |                                                                                                   |
+| Tm1          | Linear relative temperature coefficient for M                      | 1/°C    | 0.0      | -       | -                      |                                                                                                   |
+| Tm2          | Quadratic relative temperature coefficient for M                   | 1/(°C)2 | 0.0      | -       | -                      |                                                                                                   |
+| Tbv          | Temperature coefficient for Bv                                     | V/°C    | 0.0      | -       | -                      |                                                                                                   |
+| Kf           | Flicker noise coefficient                                          |         | 0.0      | -       | -                      |                                                                                                   |
+| Af           | Flicker noise exponent                                             | None    | 1.0      | -       | -                      |                                                                                                   |
+| Ffe          | Flicker noise frequency exponent                                   | None    | 1.0      | -       | -                      |                                                                                                   |
+| Cpack ††     | Package parasitic capacitance                                      | F       | 0.0      | 0       | 0.1 pF                 |                                                                                                   |
+| Lbond †††    | Package parasitic inductance                                       | H       | 0.0      | 5 nH    | 0.5 nH                 | ✅ (форма, прогиб перед импульсом)                                                                 |
+| Imax         | Explosion current                                                  | A       | 1.0      | 10      | -                      |                                                                                                   |
+| \_M          | Number of devices in parallel                                      | None    | 1        | 1       | -                      |                                                                                                   |
 
+† Parameter value varies with the temperature based on Tnom and Temp. 
 
+†† Parameter value scales with Area. 
 
-
-
-
+††† Parameter value scales inversely with Area.
